--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Highlights by HTML5 UP</title>
+		<title>Блог страница Владимира</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Моменты</h1>
+					<p>Здравствуйте меня зовут Вова <a href="http://html5up.net">HTML5 UP</a></p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
@@ -32,11 +32,11 @@
 					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Who I am</h2>
+							<h2>Кто я такой?</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>Я крутой ученик КИТиФ'а</p>
 					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
+					<a href="#two" class="goto-next scrolly">следующий</a>
 				</div>
 			</section>
 
@@ -46,17 +46,17 @@
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Stuff I do</h2>
+							<h2>SЧто я делаю</h2>
 						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+						<p>На данный момент я делаю практическую работу номер 24</p>
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
+								<h3>Круто?</h3>
 							</li>
 							<li>
 								<span class="icon solid major fa-pencil-alt"></span>
-								<h3>Lorem Ipsum</h3>
+								<h3>Реально круто</h3>
 							</li>
 							<li>
 								<span class="icon solid major fa-code"></span>
@@ -64,11 +64,11 @@
 							</li>
 							<li>
 								<span class="icon solid major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
+								<h3>Невероятно круто</h3>
 							</li>
 						</ul>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
+					<a href="#three" class="goto-next scrolly">Следующий</a>
 				</div>
 			</section>
 
@@ -78,11 +78,11 @@
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>One more thing</h2>
+							<h2>Один моментик</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>Не будет моментика</p>
 					</div>
-					<a href="#footer" class="goto-next scrolly">Next</a>
+					<a href="#footer" class="goto-next scrolly">Следующий</a>
 				</div>
 			</section>
 
@@ -411,7 +411,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<div class="container">
 					<header class="major">
-						<h2>Get in touch</h2>
+						<h2>Напиши мне))</h2>
 					</header>
 					<form method="post" action="#">
 						<div class="row gtr-uniform">
@@ -428,11 +428,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">ТГ</span></a></li>
+						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">ВК</span></a></li>
+						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Инста</span></a></li>
+						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Почта</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
