--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			<section id="header">
 				<header class="major">
 					<h1>Моменты</h1>
-					<p>Здравствуйте меня зовут Вова <a href="http://html5up.net">HTML5 UP</a></p>
+					<p>Здравствуйте меня зовут Вова</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
-						<li><a href="#one" class="button primary scrolly">Begin</a></li>
+						<li><a href="#one" class="button primary scrolly">Начать</a></li>
 					</ul>
 				</div>
 			</section>
