--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>SЧто я делаю</h2>
+							<h2>Что я делаю</h2>
 						</header>
 						<p>На данный момент я делаю практическую работу номер 24</p>
 						<ul class="icons-grid">
@@ -60,7 +60,7 @@
 							</li>
 							<li>
 								<span class="icon solid major fa-code"></span>
-								<h3>Nulla Tempus</h3>
+								<h3>cvt/cvt/cvt/cvt</h3>
 							</li>
 							<li>
 								<span class="icon solid major fa-coffee"></span>
@@ -415,9 +415,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</header>
 					<form method="post" action="#">
 						<div class="row gtr-uniform">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Представься" /></div>
+							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Почта" /></div>
+							<div class="col-12"><textarea name="message" id="message" placeholder="Ваши пожелания" rows="4"></textarea></div>
 							<div class="col-12">
 								<ul class="actions special">
 									<li><input type="submit" value="Send Message" class="primary" /></li>
@@ -434,7 +434,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Почта</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; Жеск 2025</li><li>Демка: <a href="http://unsplash.com">Варафак РЯЛЬНА</a></li>
 					</ul>
 				</footer>
 			</section>
