--- a/index.html
+++ b/index.html
@@ -82,7 +82,22 @@
 						</header>
 						<p>Не будет моментика</p>
 					</div>
-					<a href="#footer" class="goto-next scrolly">Следующий</a>
+						<a href="#footer" class="goto-next scrolly">Следующий</a>
+					<div class="slider">
+    						<div class="slides">
+        					<div class="slide active">
+            						<img src="path/to/image1.jpg" alt="Путешествие 1">
+        					</div>
+        					<div class="slide">
+            						<img src="path/to/image2.jpg" alt="Путешествие 2">
+        					</div>
+        					<div class="slide">
+            						<img src="path/to/image3.jpg" alt="Путешествие 3">
+        					</div>
+    					</div>
+    						<button class="prev" onclick="changeSlide(-1)">&#10094;</button>
+    						<button class="next" onclick="changeSlide(1)">&#10095;</button>
+					</div>
 				</div>
 			</section>
 
