--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
 					<div class="slider">
     						<div class="slides">
         					<div class="slide active">
-            						<img src="path/to/image1.jpg" alt="Путешествие 1">
+            						<img src="images/qwe1.jpg" alt="Путешествие 1">
         					</div>
         					<div class="slide">
-            						<img src="path/to/image2.jpg" alt="Путешествие 2">
+            						<img src="images/qwe2.jpg" alt="Путешествие 2">
         					</div>
         					<div class="slide">
-            						<img src="path/to/image3.jpg" alt="Путешествие 3">
+            						<img src="images/qwe3.jpg" alt="Путешествие 3">
         					</div>
     					</div>
     						<button class="prev" onclick="changeSlide(-1)">&#10094;</button>
