--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</div>
 					</form>
 				</div>
+				<button id="scrollToTopButton" style="display: none;">Наверх</button>
 				<footer>
 					<ul class="icons">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">ТГ</span></a></li>
