--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<meta charset="UTF-8">
-    		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    		<title>Ваш сайт турагентства</title>
-    		<link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
-    		<link rel="apple-touch-icon" sizes="180x180" href="path/to/favicon.png">
-    		<link rel="icon" type="image/png" sizes="32x32" href="path/to/favicon-32x32.png">
-    		<link rel="icon" type="image/png" sizes="16x16" href="path/to/favicon-16x16.png">
+		
+    		<link rel="icon" href="image/favicon.ico" type="image/x-icon">
+    		<link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
+    		<link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
+    		<link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
 	</head>
 	<body class="is-preload">
 
