--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		
-    		<link rel="icon" href="/images/favicon.ico" type="images/x-icon">
+    		<link rel="icon" href="images/favicon.ico" type="images/x-icon">
 	</head>
 	<body class="is-preload">
 
