--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     		<link rel="icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body class="is-preload">
-
+	<nav>
+        	<ul>
+            	<li><a href="index.html">Главная</a></li>
+           	<li><a href="about.html">О нас</a></li>
+            	<li><a href="contact.html">Контакты</a></li>
+        	</ul>
+    	</nav>
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
