--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             	<li><a href="index.html">Главная</a></li>
            	<li><a href="about.html">О нас</a></li>
             	<li><a href="contact.html">Контакты</a></li>
+		<li><a href="services.html">Услуги</a></li>
         	</ul>
     	</nav>
 		<!-- Header -->
@@ -443,7 +444,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<div class="col-12"><textarea name="message" id="message" placeholder="Ваши пожелания" rows="4"></textarea></div>
 							<div class="col-12">
 								<ul class="actions special">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
+									<li><input type="submit" value="Давай давай" class="primary" /></li>
 								</ul>
 							</div>
 						</div>
